# rover_bot

./: README.md  env.sh
rover_bot_application/: rover_bot.code-workspace
rover_bot_application/docs/: index.md
rover_bot_application/docs/distance_range_sensors/: index.md
rover_bot_application/docs/tutorials/: simple_skid_rover.md
rover_bot_application/examples/: arm_guided_atitude.py  connect.py  hud_generator.py  py_gazebo_demo.py  py_gazebo_img.py
rover_bot_bringup/: README.md
rover_bot_bringup/config/: tmux_demo.yaml  tmux_plane_and_gazebo.yaml  tmux_sitl_and_gazebo.yaml
rover_bot_bringup/docs/: simple_run.md
rover_bot_bringup/scripts/: run_arduplane.sh  run_ardurover.sh  run_gazebo_plane_and_mavproxy.sh  run_gazebo_sitl_and_mavproxy.sh
rover_bot_description/models/camera/: model.config  model.sdf
rover_bot_description/models/cessna/: model.sdf
rover_bot_description/models/cessna_ardupilot/: model.config  model.sdf
rover_bot_description/models/ground_course/: model.config  model.sdf
rover_bot_description/models/husky/: model.sdf
rover_bot_description/models/pendulm/: model.config  model.sdf
rover_bot_description/models/plane/: model.config  titranew.sdf
rover_bot_description/models/rover_ardupilot/: model.sdf
rover_bot_description/models/rover_bot/: model.config  model.sdf
rover_bot_gazebo/: CMakeLists.txt
rover_bot_gazebo/src/: joint_controller_plugin.cc  world_plugin.cc
rover_bot_gazebo/worlds/: bot.sdf  camera_test.sdf  cessna_demo.world  course.world  demo_world_plugin.world  rover_world.sdf  t_model.world  titra.world
(+4 files in other folders)
